style.css
* {
    box-sizing: border-box;
    margin: 0;
}

ul {
    padding-left: 0;
}

body {
    background-color: #efefef;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 98vh;
    font-family: 'Roboto', sans-serif;
}

#app {
    width: 1600px;
    min-height: 900px;
    background: white;
    border-radius: 15px;
    display: flex;
    align-items: stretch;
    margin-top: 20px;
    margin-bottom: 25px;
}

header {
    display: flex;
}

/* Side Navigation */
nav {
    width: 385px;
    border-right: 2px solid #e0e0e0;
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

nav header {
    align-items: center;
    justify-content: center;
    padding: 25px 0 40px;
}

nav header img {
    width: 60px;
    display: inline-block;
}

nav h1 {
    display: inline-block;
    margin: 0 5px 0 -5px;
    color: #89d2cc;
}

nav ul {
    list-style: none;
    padding-left: 0;
}

nav ul:nth-of-type(2) {
    height: 100%;
    display: flex;
    flex-direction: column;
    padding-bottom: 40px;
}

nav ul:nth-of-type(2) > :first-child {
    margin-top: auto;
}

nav li {
    position: relative;
    padding-left: 30px;
    display: flex;
    align-items: center;
}

.nav-list > li {
    margin-bottom: 32px;
}

.nav-btn-container {
    display: block;
}

nav li img {
    width: 25px;
    filter: brightness(0%);
    filter: opacity(75%);
}

nav li a {
    text-decoration: none;
    color: #757575;
    padding-left: 20px;
}

.nav-item-active {
    background-color: #f7f7f7;
    align-items: flex-start;
    padding-top: 15px;
    padding-bottom: 15px;
    display: block;
    margin-top: -15px;
    margin-bottom: 20px;
    padding-left: 0;
}

#nav-btn-container {
    margin-bottom: 15px;
    display: flex;
    align-items: center;
    border-left: 3px solid #151515;
    padding-left: 30px;
}

#nav-btn-container img {
    filter: brightness(0%);
    filter: opacity(100%);
}

#nav-container-projects {
    flex-direction: column;
}

#nav-caret {
    width: 16px;
    height: 16px;
    position: absolute;
    right: 32px;
}

#sub-nav {
    margin-left: 40px;
    font-size: 13px;
    padding-right: 20px;
    padding-left: 12px;
    border-left: 2px solid #e0e0e0;
}

#sub-nav li {
    padding: 10px 20px;
}

#sub-nav img:first-of-type {
    width: 18px;
    height: 18px;
}

#nav-ellipsis {
    position: absolute;
    right: 0;
    margin-right: 20px;
    width: 14px;
    height: 14px;
}

#sub-nav a {
    color: #9e9e9e;
}

#sub-item-active {
    background-color: #151515;
}

#sub-item-active img {
    -webkit-filter: invert(100%);
    filter: invert(100%);
}

#sub-item-active a {
    color: #e0e0e0;
}

.nav-updates {
    background: #feede2;
    padding: 5px 15px; 
    border-radius: 25px;
    position: absolute;
    right: 32px;
    color: #424242;
    font-size: 14px;
}

/* Page Content */
main {
    width: 100%;
    padding: 55px 40px;
}

main header {
    width: 100%;
    justify-content: space-between;
    margin-bottom: 65px;
}

#content-heading {
    display: flex;
    align-items: flex-end;
}

h2 {
    font-size: 32px;
}

h3 {
    margin-left: 14px;
    padding-bottom: 4px;
    font-size: 16px;
    font-weight: 300;
    color: #757575;
}

section {
    display: inline-block;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    column-gap: 35px;
}

#main-content {
    padding: 0 15px;
}

.column-header {
    display: flex;
    justify-content: space-between;
    margin-bottom: 25px;
}

h4 {
    font-size: 22px;
    letter-spacing: 1px;
    color: #151515;
    margin-bottom: 10px;
}

h5 {
    font-size: 16px;
    font-weight: 100;
    color: #757575;
}

.column-menu-btn {
    width: 38px;
    height: 38px;
    border: 1px solid #e0e0e0 ;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.column-header img {
    width: 12px;
    height: 12px;
    filter: opacity(55%);
}

.column button {
    border: none;
    background-color: #151515;
    color: #e0e0e0;
    width: 100%;
    height: 50px;
    font-size: 14px;
    display: flex;
    justify-content: center;
    align-items: center;
    column-gap: 12px;
    margin-bottom: 20px;
}

.add-task-icon {
    background-color: #fde0cb;
    color: #212121;
    display: inline-block;
    width: 20px;
    height: 20px;
    border-radius: 50%;
}

.card {
    padding: 25px 20px;
    border-top: 2px solid #9e9e9e;
}

.card:first-of-type {
    border: none;
}

.card-selected {
    background-color: #eff9ff;
    border-top: 2px solid #81d4fa;
}

.card h6 {
    font-size: 20px;
    color: #1b1b1b;
    font-weight: 500;
    margin-bottom: 8px;
}

.task-info {
    margin-bottom: 15px;
    font-size: 14px;
    color: #757575;
    font-weight: 300
}

.task-desc {
    font-size: 15px;
    color: #616161;
    margin-bottom: 30px;
}

.card-footer {
    display: flex;
    justify-content: space-between;
}

.card-footer span {
    font-size: 15px;
}

.ui-category {
    color: #ec407a;
}

.dev-category {
    color: #29b6f6;
}

.card-footer img {
    width: 20px;
    height: 20px;
    justify-self: flex-end;
    filter: grayscale(1);
}

.card-updates {
    display: flex;
    align-items: center;
}

.card-updates span {
    font-size: 14px;
    margin-left: 4px;
    letter-spacing: -1px;
    color: #8ea4b1;
}

/* Footer */
footer {
    display: block;
    text-align: center;
}

footer a {
    text-decoration: none;
    color: #424242;
}

